# Open-GL-project

./: .gitignore.save  CMakeLists.txt  Camera.cpp  Camera.hpp  README.md  main.cpp
models/scene/: fairy.mtl  scene.mtl
shaders/: basic.frag  basic.vert
